# disinfo-relation-checker

./: .editorconfig  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  designdoc.md  noxfile.py  pyproject.toml
src/disinfo_relation_checker/: __init__.py  ab_testing.py  classifier.py  cli.py  csv_processor.py  llm_factory.py  llm_providers.py  model_registry.py  optimization_strategies.py  performance_monitoring.py  prompt_optimizer.py  settings.py  training_data.py
tests/: __init__.py  conftest.py  test_ab_testing.py  test_classifier.py  test_cli.py  test_cli_e2e.py  test_csv_processor.py  test_llm_factory.py  test_model_registry.py  test_ollama_provider.py  test_optimization_strategies.py  test_package.py  test_performance_monitoring.py  test_prompt_optimizer.py  test_settings.py  test_training_data.py
tests/e2e/: __init__.py  test_cli.py
tests/fixtures/: expected_output_sample.csv  sample_input.csv
tests/fixtures/csv_processor/input/: basic_input.csv  empty_file.csv
tests/fixtures/csv_processor/special_cases/: quotes_and_commas.csv
