[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disinfo-relation-checker"
description = "Check if a relation is disinformation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}
dynamic = ["version"]


[tool.hatch.build.targets.wheel]
packages = ["src/disinfo_relation_checker"]
py.typed = true

[tool.hatch.version]
source = "regex"
pattern = '^__version__ = "(?P<version>.+)"$'
path = "src/disinfo_relation_checker/__init__.py"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "nox>=2025.5.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # trailing-comma-missing (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert-used (pytest uses asserts)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = ["-sv", "--doctest-modules"]
testpaths = [
    "tests",
    "src/disinfo_relation_checker",
]
pythonpath = [
    "src",
]
filterwarnings = [
    "error",
]
markers = [
    "e2e: marks tests as end-to-end tests"
]
